policies/supply-chain/verify-image-signature-admit_test/signed-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: signed
spec:
  containers:
    - name: app
      image: ghcr.io/kyverno/zulu:v0.0.14
